--- a/Configs/Factions/PLAYERS_Campaign.conf
+++ b/Configs/Factions/PLAYERS_Campaign.conf
@@ -171,6 +171,13 @@ SCR_CampaignFaction : "{5EB46557DF2AA24F}Configs/Factions/US.conf" {
         }
        }
       }
+      SCR_EntityCatalogInventoryItem "{66E427C03AECDB5E}" {
+       m_aEntityDataList {
+        SCR_ArsenalItem "{66E427C03AECDB07}" {
+         m_iSupplyCost 200
+        }
+       }
+      }
       SCR_EntityCatalogInventoryItem "{5EF92AEFDF37D4D9}" {
        m_aEntityDataList {
         SCR_ArsenalItem "{5EAF546FE877CE7D}" {
