--- a/Missions/ARGHZMO_Kolguyev.conf
+++ b/Missions/ARGHZMO_Kolguyev.conf
@@ -1,9 +1,9 @@
 SCR_MissionHeaderCampaign : "{BB5345C22DD2B655}Missions/23_Campaign_HQC_Cain.conf" {
  World "{FE9374316AF141CB}Worlds/MO_Kolguyev_ARGH.ent"
  m_sName "ARGH SURVIVORS"
- m_sAuthor "ARGH & wyqydsyq"
- m_sDescription "Thanks darc ballien wyqdsyq | Conflict Persistent PvPvE | Loot | Scav NPCs | https://discord.gg/HAFeWGsppX"
- m_sDetails "In early development!<br />Expect bugs and frequent wipes.<br /><br />Join the Discord to report bugs or provide feedback: <h2>https://discord.gg/HAFeWGsppX</h2>"
+ m_sAuthor "argh"
+ m_sDescription "thanks darc ballien blackout wyqdsyq | conflict Persistent pvpve | loot | scav npc's | https://discord.gg/hafewgsppx"
+ m_sDetails "In early development!<br />expect bugs and frequent wipes.<br /><br />join the discord to report bugs or provide feedback: <h2>https://discord.gg/hafewgsppx</h2>"
  m_sIcon "{5A45DACD96EBD38E}Assets/Images/shaded.edds"
  m_sLoadingScreen "{DA901DC6C744D902}Assets/Images/ARGHZ.edds"
  m_sPreviewImage "{61F04A7913C0C45E}Assets/Images/ARGH_survivors_small.edds"
