Fix: Metabolism Peristence - Added the ARGH metabolism serializer to the player character persistence config so hydration and energy are saved/restored by the built‑in persistence system across Conflict/EditableMission. This removes reliance on any custom JSON save path and keeps metabolism state consistent with other player‑bound saves.

--- a/Configs/Systems/Persistence/Configuration/Character/Player.conf
+++ b/Configs/Systems/Persistence/Configuration/Character/Player.conf
@@ -6,6 +6,9 @@ EntityPersistenceConfig : "{8A02793079069D96}Configs/Systems/Persistence/Configu
  ComponentSerializers {
   InventoryStorageManagerComponentSerializer "{A8C3F1D47B9E6A21}" {
   }
+  // ARGH survival: persist hydration/energy with player character saves.
+  ARGH_CharacterControllerMetabolismSerializer "{ARGH_METABOLISM_SERIALIZER}" {
+  }
   SCR_CharacterQuickBarSerializer "{6506922488F54C8C}" {
    m_aSlotIndexFilter {
     4
