Go‑live test update: refreshed a broad set of assets (cave materials/textures, cash/props/signage, terrain/sky/ocean, UI images/icons, waterfall SFX), updated many prefabs (characters, ambient vehicles/spawnpoints, loot containers/spawners, props/structures/fast‑travel), revised core configs (factions, ambient vehicles, metabolism, persistence, economy/loot, map markers, hints, GM menu), adjusted gameplay/UI scripts (ambient systems, metabolism & persistence serializers, respawn/spawn logic, screen effects, factions, currency, editor bootstraps), plus HUD/menu layout tweaks and world/layer edits for ARGHSurvivors.

--- a/Configs/Factions/US.conf
+++ b/Configs/Factions/US.conf
@@ -8,7 +8,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
    m_aMultiLists {
     SCR_EntityCatalogMultiListEntry "{6134C3321AC153FC}" {
      m_aEntities {
-      SCR_EntityCatalogInventoryItem "{670F7E9FBD1B2102}" {
+     SCR_EntityCatalogInventoryItem "{670F7E9FBD1B2102}" {
        m_sEntityPrefab "{173AB5EB5EF99F21}Prefabs/Props/Civilian/StorageBoxPlans.et"
        m_aEntityDataList {
         SCR_ArsenalItem "{670F7E9FBD1B0C86}" {
@@ -19,9 +19,86 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
         }
        }
       }
+      SCR_EntityCatalogInventoryItem "{6732BA8E637AE95E}" {
+       m_sEntityPrefab "{D125E11C31A965AA}Prefabs/BaseBuilding/Storage/Safe/SafeBook.et"
+       m_aEntityDataList {
+        SCR_ArsenalItem "{6732BA8E637AE90F}" {
+         m_eItemType EQUIPMENT
+         m_iSupplyCost 728
+        }
+        SCR_EntityCatalogIdentityItemData "{6732BA8E637AE90C}" {
+        }
+       }
+      }
+      SCR_EntityCatalogInventoryItem "{67387DF9C2ABB93E}" {
+       m_sEntityPrefab "{703F2DB693C60ABF}Prefabs/Props/Civilian/NewBasePlans.et"
+       m_aEntityDataList {
+        SCR_ArsenalItem "{67387DF9C2AB9B34}" {
+         m_eItemType EQUIPMENT
+         m_iSupplyCost 4546
+        }
+        SCR_EntityCatalogIdentityItemData "{67387DF9C2AB9B2E}" {
+        }
+       }
+      }
+      SCR_EntityCatalogInventoryItem "{67387DEF7D789E19}" {
+       m_sEntityPrefab "{98772037608AC4D7}Prefabs/Props/Civilian/Nail.et"
+       m_aEntityDataList {
+        SCR_ArsenalItem "{67387DEF7D789EA9}" {
+         m_eItemType EQUIPMENT
+         m_iSupplyCost 1
+        }
+        SCR_EntityCatalogIdentityItemData "{67387DEF7D789EAC}" {
+        }
+       }
+      }
+      SCR_EntityCatalogInventoryItem "{67397C32CBBCC2E9}" {
+       m_sEntityPrefab "{344BEBA1D2C8095C}Prefabs/Props/Civilian/Nails.et"
+       m_aEntityDataList {
+        SCR_ArsenalItem "{67397C32CBBCCCC4}" {
+         m_eItemType EQUIPMENT
+         m_iSupplyCost 1
+        }
+        SCR_EntityCatalogIdentityItemData "{67397C32CBBCCCB9}" {
+        }
+       }
+      }
+      SCR_EntityCatalogInventoryItem "{67387DEF7C1D0AB1}" {
+       m_sEntityPrefab "{06F1E252DC029B8C}Prefabs/Props/Civilian/Plank.et"
+       m_aEntityDataList {
+        SCR_ArsenalItem "{67387DEF7C1D0B6C}" {
+         m_eItemType EQUIPMENT
+         m_iSupplyCost 5
+        }
+        SCR_EntityCatalogIdentityItemData "{67387DEF7C1D0B61}" {
+        }
+       }
+      }
+      SCR_EntityCatalogInventoryItem "{673973A46F09B5FF}" {
+       m_sEntityPrefab "{9CAC68BA551417A4}Prefabs/Stuff/Axe/Axe.et"
+       m_aEntityDataList {
+        SCR_ArsenalItem "{673973A46F09971C}" {
+         m_eItemType EQUIPMENT
+         m_iSupplyCost 50
+        }
+        SCR_EntityCatalogIdentityItemData "{673973A46F099711}" {
+        }
+       }
+      }
+      SCR_EntityCatalogInventoryItem "{673973A45D67E261}" {
+       m_sEntityPrefab "{D5D3CC0E5FA82395}Prefabs/Saw/Saw.et"
+       m_aEntityDataList {
+        SCR_ArsenalItem "{673973A45D67E216}" {
+         m_eItemType EQUIPMENT
+         m_iSupplyCost 50
+        }
+        SCR_EntityCatalogIdentityItemData "{673973A45D67E20B}" {
+        }
+       }
+      }
      }
     }
-   }
   }
  }
+}
 }
