--- a/Configs/Systems/DL_LootSystem.conf
+++ b/Configs/Systems/DL_LootSystem.conf
@@ -1,12 +1,9 @@
 DL_LootSystem {
- scarcityMultiplier 35
- maxLootItemsPerContainer 2
- maxContainerValue 10
- jackpotContainerRate 0.001
- jackpotContainerValueMultiplier 50
- ammoMultiplier 0.002
- attachmentMultiplier 0.002
- commonItemTypesMultiplier 0.012
- uncommonItemTypesMultiplier 0.001
- rareItemTypesMultiplier 0.001
+ factionBlacklist {
+  "SCAV"
+ }
+ maxLootItemsPerContainer 3
+ commonItemTypes +{
+  HEAL
+ }
 }
